src/test/pass/classes.j
class Main {
    Void main() {
        return;
    }
}

class A {
    Int a;

    Void aa() {
        return;
    }
}

class B {
    String b;

    Void bb() {
        return;
    }
}

class C {
    Bool c;

    Void cc() {
        return;
    }
}
