src/test/fail/duplicate_vars.j
class Main {
    Void main() {
        return;
    }
}

class A {
    Int a;
    Bool a;
}
